<resources>
    <string name="app_name">Health&amp;Happy</string>
    <string name="health_happy"><![CDATA[Health&Happy]]></string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="logo">logo</string>
    <string name="welcome">welcome</string>
    <string name="email">email</string>
    <string name="create_new_account">create new account</string>
    <string name="diet_mayo_adalah_suatu_jenis_diet_yang_terutama_membatasi_konsumsi_karbohidrat_dan_garam_selama_13_hari_diet_mayo_dapat_dilakukan_dalam_jangka_panjang_aturan_dalam_melaksanakan_diet_mayo_yaitu_benar_benar_tidak_makan_garam_atau_makanan_asin_sama_sekali_selama_hampir_2_minggu_dan_memperbanyak_minum_air_putih_diet_mayo_adalah_suatu_jenis_diet_yang_terutama_membatasi_konsumsi_karbohidrat_dan_garam_selama_13_hari_diet_mayo_dapat_dilakukan_dalam_jangka_panjang_aturan_dalam_melaksanakan_diet_mayo_yaitu_benar_benar_tidak_makan_garam_atau_makanan_asin_sama_sekali_selama_hampir_2_minggu_dan_memperbanyak_minum_air_putih">Diet mayo adalah suatu jenis diet yang terutama membatasi konsumsi karbohidrat dan garam, selama 13 hari diet mayo dapat dilakukan dalam jangka panjang, aturan dalam melaksanakan diet mayo yaitu benar-benar tidak makan garam atau makanan asin sama sekali selama hampir 2 minggu, dan memperbanyak minum air putih Diet mayo adalah suatu jenis diet yang terutama membatasi konsumsi karbohidrat dan garam, selama 13 hari diet mayo dapat dilakukan dalam jangka panjang, aturan dalam melaksanakan diet mayo yaitu benar-benar tidak makan garam atau makanan asin sama sekali selama hampir 2 minggu, dan memperbanyak minum air putih</string>
    <string name="diet_mayo">Diet Mayo</string>
    <string name="program_diet">Program Diet</string>
    <string name="resep_makanan">Resep Makanan</string>
    <string name="diet_keto_menekankan_pada_asupan_tinggi_lemak_dan_rendah_karbohidrat_diet_ini_membuat_tubuh_yang_terbiasa_menggunakan_gula_sebagai_energi_berubah_menggunakan_lemak_sebagai_energi_yang_disebut_ketosis_kriteria_diet_keto_adalah_konsumsi_lemak_60_80_persen_konsumsi_protein_20_30_persen_konsumsi_karbohidrat_5_10_persen">Diet keto menekankan pada asupan tinggi lemak dan rendah karbohidrat. Diet ini membuat tubuh yang terbiasa menggunakan gula sebagai energi berubah menggunakan lemak sebagai energi yang disebut ketosis. Kriteria diet keto adalah Konsumsi lemak 60-80 persen, Konsumsi protein 20-30 persen, Konsumsi karbohidrat 5-10 persen</string>
    <string name="diet_ocd_merupakan_metode_diet_atau_puasa_dengan_menggunakan_sistem_jendela_makan_jendela_makan_sendiri_adalah_lamanya_waktu_ketika_diperbolehkan_makan_waktu_makannya_berbeda_beda_dan_bebas_sesuai_pilihan_ada_yang_dimulai_dengan_waktu_8_jam_6_jam_hingga_4_jam_saja_dalam_sehari">Diet OCD merupakan metode diet atau puasa dengan menggunakan sistem jendela makan. Jendela makan sendiri adalah lamanya waktu ketika diperbolehkan makan. Waktu makannya berbeda-beda dan bebas sesuai pilihan, ada yang dimulai dengan waktu 8 jam, 6 jam, hingga 4 jam saja dalam sehari.</string>
    <string name="diet_ocd">Diet OCD</string>
    <string name="diet_keto">Diet Keto</string>
</resources>
