<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".DetailDietKeto">

    <TextView
        android:id="@+id/diet_mayo"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/diet_keto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/penjelasan"
        android:layout_width="0dp"
        android:layout_height="203dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="297dp"
        android:background="#F1CAA3"
        android:gravity="center"
        android:text="@string/diet_keto_menekankan_pada_asupan_tinggi_lemak_dan_rendah_karbohidrat_diet_ini_membuat_tubuh_yang_terbiasa_menggunakan_gula_sebagai_energi_berubah_menggunakan_lemak_sebagai_energi_yang_disebut_ketosis_kriteria_diet_keto_adalah_konsumsi_lemak_60_80_persen_konsumsi_protein_20_30_persen_konsumsi_karbohidrat_5_10_persen"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/diet_mayo"
        app:layout_constraintVertical_bias="0.381" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:background="@color/new_green"
        android:text="@string/program_diet"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/penjelasan" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:background="@color/new_green"
        android:text="@string/resep_makanan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/penjelasan" />

</android.support.constraint.ConstraintLayout>
